now, i like more the style of about us section

--- a/aboutUs.html
+++ b/aboutUs.html
@@ -69,8 +69,16 @@
                     <p>John is responsible for...</p>
                     <button>CEO</button>
                 </div>
-                <div class="div2"></div>
-                <div class="div3"></div>
+                <div class="div2"> <img src="img/Avatar.webp" alt="">
+                    <h2>John Doe</h2>
+                    <p>John is responsible for...</p>
+                    <button>CEO</button>
+                </div>
+                <div class="div3"> <img src="img/Avatar.webp" alt="">
+                    <h2>John Doe</h2>
+                    <p>John is responsible for...</p>
+                    <button>CEO</button>
+                </div>
 
             </div>
         </main>
