Now, i am at the 5th task in the lab. so, only task 5th to 10th is missing

--- a/aboutUs.html
+++ b/aboutUs.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <title>Travel Recommendation</title>
     <link rel="stylesheet" href="style.css">
+ <link rel="icon" type="image/png" href="img/transparent-Photoroom2.png">
+
 </head>
 
 <body>
@@ -12,14 +14,14 @@
     <nav class="header">
 
         <div class="logo">
-            <img src="img/avión.png" alt="logo" width="200" height="100">
+            <img src="img/transparent-Photoroom2.png" alt="logo" width="200" height="120">
             <h1>TravelBloom</h1>
         </div>
 
         <ul class="nav-link">
 
             <li><a href="travel_recommendation.html">Home</a></li>
-            <li><a href="">About us</a></li>
+            <li><a href="aboutUs.html">About us</a></li>
             <li><a href="">Contac Us</a></li>
 
         </ul>
@@ -38,10 +40,10 @@
         <aside class="sidebar">
             <div class="line"></div>
             <ul>
-                <li><a href="#"><img src="./img/gorjeo.png" alt="Twitter"></a></li>
-                <li><a href="#"><img src="./img/facebook.png" alt="Facebook"></a></li>
-                <li><a href="#"><img src="./img/instagram.png" alt="Instagram"></a></li>
-                <li><a href="#"><img src="./img/youtube.png" alt="YouTube"></a></li>
+                <li><a href="#"><img src="./img/icons8-facebook-50.png" alt="Twitter"></a></li>
+                <li><a href="#"><img src="./img/icons8-twitter-50.png" alt="Facebook"></a></li>
+                <li><a href="#"><img src="./img/icons8-instagram-50.png" alt="Instagram"></a></li>
+                <li><a href="#"><img src="./img/icons8-youtube-50.png" alt="YouTube"></a></li>
 
             </ul>
         </aside>
@@ -70,14 +72,17 @@
                     <button>CEO</button>
                 </div>
                 <div class="div2"> <img src="img/Avatar.webp" alt="">
-                    <h2>John Doe</h2>
-                    <p>John is responsible for...</p>
-                    <button>CEO</button>
+                    <h2>Celina Thomas</h2>
+                    <p>Celina Thomas is responsible for…
+                    </p>
+                    <button>Team Lead</button>
                 </div>
                 <div class="div3"> <img src="img/Avatar.webp" alt="">
-                    <h2>John Doe</h2>
-                    <p>John is responsible for...</p>
-                    <button>CEO</button>
+                    <h2>Mike Tysen
+                    </h2>
+                    <p>Mike Tysen is responsible for…
+                    </p>
+                    <button>Delivery Head</button>
                 </div>
 
             </div>
