--- a/travel_recommendation.html
+++ b/travel_recommendation.html
@@ -2,47 +2,48 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <title>Travel Recommendation</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <title>Travel Recommendation</title>
+  <link rel="stylesheet" href="style.css">
+  <link rel="icon" type="image/png" href="img/transparent-Photoroom2.png">
+
 </head>
 
 <body>
 
-    <nav class="header">
+  <nav class="header">
 
-        <div class="logo">
-            <img src="img/avión.png" alt="logo" width="200" height="100">
-            <h1>TravelBloom</h1>
-        </div>
+    <div class="logo">
+      <img src="img/transparent-Photoroom2.png" alt="logo" width="200" height="120">
+      <h1>TravelBloom</h1>
+    </div>
+    <ul class="nav-link">
 
-        <ul class="nav-link">
+      <li><a href="travel_recommendation.html">Home</a></li>
+      <li><a href="aboutUs.html">About us</a></li>
+      <li><a href="">Contac Us</a></li>
 
-            <li><a href="travel_recommendation.html">Home</a></li>
-            <li><a href="">About us</a></li>
-            <li><a href="">Contac Us</a></li>
+    </ul>
 
-        </ul>
+    <div class="search-box">
+      <input type="text" placeholder="Enter a destination or keyword">
+      <button id="Search">Search</button>
+      <button id="Clear">Clear</button>
+    </div>
 
-        <div class="search-box">
-            <input type="text" placeholder="Enter a destination or keyword">
-            <button id="Search">Search</button>
-            <button id="Clear">Clear</button>
-        </div>
-
-    </nav>
+  </nav>
 
 
-<div class="container">
+  <div class="container">
     <!-- Barra lateral -->
     <aside class="sidebar">
       <div class="line"></div>
       <ul>
-        <li><a href="#"><img src="./img/gorjeo.png" alt="Twitter"></a></li>
-        <li><a href="#"><img src="./img/facebook.png" alt="Facebook"></a></li>
-        <li><a href="#"><img src="./img/instagram.png" alt="Instagram"></a></li>
-        <li><a href="#"><img src="./img/youtube.png" alt="YouTube"></a></li>
-        
+        <li><a href="#"><img src="./img/icons8-facebook-50.png" alt="Twitter"></a></li>
+        <li><a href="#"><img src="./img/icons8-twitter-50.png" alt="Facebook"></a></li>
+        <li><a href="#"><img src="./img/icons8-instagram-50.png" alt="Instagram"></a></li>
+        <li><a href="#"><img src="./img/icons8-youtube-50.png" alt="YouTube"></a></li>
+
       </ul>
     </aside>
 
