--- a/travel_recommendation.html
+++ b/travel_recommendation.html
@@ -21,7 +21,7 @@
 
       <li><a href="travel_recommendation.html">Home</a></li>
       <li><a href="aboutUs.html">About us</a></li>
-      <li><a href="">Contac Us</a></li>
+      <li><a href="contactUs.html">Contac Us</a></li>
 
     </ul>
 
