Dising part ended

--- a/contactUs.html
+++ b/contactUs.html
@@ -25,7 +25,7 @@
 
         </ul>
 
-        <div class="search-box">
+        <div class="search-box" style="visibility:hidden;">
             <input type="text" placeholder="Enter a destination or keyword">
             <button id="Search">Search</button>
             <button id="Clear">Clear</button>
@@ -59,13 +59,13 @@
             <label for="name">Name</label> <br>
             <input type="text" id="name"><br>
 
-            <label for="email">Email</label>
-            <input type="text" id="email">
+            <label for="email">Email</label><br>
+            <input type="text" id="email"><br>
 
-            <label for="textarea">Menssage</label>
-            <textarea id="textarea"></textarea>
+            <label for="textarea">Menssage</label><br>
+            <textarea id="textarea"></textarea><br><br>
 
-            <input type="submit" value="">
+            <input type="submit" value="Sumit">
         </form>
 
     </div>
