i am almost there, only the javascript part is missing

--- a/aboutUs.html
+++ b/aboutUs.html
@@ -65,19 +65,19 @@
 
             <div class="team">
                 <h1>Our <br> Team</h1>
-                <div class="div1">
+                <div class="">
                     <img src="img/Avatar.webp" alt="">
                     <h2>John Doe</h2>
                     <p>John is responsible for...</p>
                     <button>CEO</button>
                 </div>
-                <div class="div2"> <img src="img/Avatar.webp" alt="">
+                <div class=""> <img src="img/Avatar.webp" alt="">
                     <h2>Celina Thomas</h2>
                     <p>Celina Thomas is responsible for…
                     </p>
                     <button>Team Lead</button>
                 </div>
-                <div class="div3"> <img src="img/Avatar.webp" alt="">
+                <div class=""> <img src="img/Avatar.webp" alt="">
                     <h2>Mike Tysen
                     </h2>
                     <p>Mike Tysen is responsible for…
