--- a/travel_recommendation.html
+++ b/travel_recommendation.html
@@ -26,7 +26,7 @@
     </ul>
 
     <div class="search-box">
-      <input type="text" placeholder="Enter a destination or keyword">
+      <input type="text" placeholder="Enter a destination or keyword" id="text">
       <button id="Search">Search</button>
       <button id="Clear">Clear</button>
     </div>
@@ -57,10 +57,27 @@
       </p>
       <button>BOOK NOW</button>
     </main>
+
+
+
+    <div class="card">
+      <img src="img/Dubai2.jpg" alt="">
+      <div class="below">
+        <h1>Dubai</h1>
+        <p> It encourages exploration of unfamiliar territories, embracing diverse cultures
+          and landscapes, while pursuing the desired destination that captivates the heart
+          and ignites a sense of wonder.</p>
+        <button>Visit</button>
+      </div>
+
+
+    </div>
+
+
   </div>
 
 
-  <div class="result"></div>
+
 
 
 </body>
