--- a/travel_recommendation.html
+++ b/travel_recommendation.html
@@ -59,26 +59,30 @@
     </main>
 
 
+    <div id="result">
 
-    <div class="card">
-      <img src="img/Dubai2.jpg" alt="">
-      <div class="below">
-        <h1>Dubai</h1>
-        <p> It encourages exploration of unfamiliar territories, embracing diverse cultures
-          and landscapes, while pursuing the desired destination that captivates the heart
-          and ignites a sense of wonder.</p>
-        <button>Visit</button>
+      <div class="card">
+        <img src="img/Dubai2.jpg" alt="">
+        <div class="below">
+          <h1>Dubai</h1>
+          <p> It encourages exploration of unfamiliar territories, embracing diverse cultures
+            and landscapes, while pursuing the desired destination that captivates the heart
+            and ignites a sense of wonder.</p>
+          <button>Visit</button>
+        </div>
       </div>
 
 
+
     </div>
+
 
 
   </div>
 
 
 
-
+  <script src="travel_recommendation.js"></script>
 
 </body>
 
